feat: find one profile
